# pydantic-choices

./: .travis.yaml  .travis.yml  LICENSE  README.md  pyproject.toml
pydantic_choices/: __init__.py  main.py
tests/: test_choices.py
