[tool.poetry]
name = "pydantic-choices"
version = "0.1.0"
description = ""
authors = ["Jordi Masip <jordi@masip.cat>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pydantic = "^1.6.1"
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^5.1.4"
flake8 = "^3.8.3"
pytest-cov = "^2.10.0"

[tool.isort]
force_single_line = "True"
sections = ["THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "STDLIB"]
no_lines_before = ["LOCALFOLDER", "THIRDPARTY", "FIRSTPARTY", "STDLIB"]
force_alphabetical_sort = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
